made the helper public

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -8,3 +8,6 @@ services:
     InspiredMinds\ContaoLottiePlayer\:
         resource: ../../
         exclude: ../../{ContaoManager,Model,DependencyInjection,Resources}
+
+    InspiredMinds\ContaoLottiePlayer\LottiePlayerHelper:
+        public: true
